@@ -1,4 +1,5 @@
 3.6
+ * (cqlsh) interpret CQL type for formatting blobs (CASSANDRA-11274)
  * Refuse to start and print txn log information in case of disk
    corruption (CASSANDRA-10112)
  * Resolve some eclipse-warnings (CASSANDRA-11086)
